Sun usage working - displayed by pressing 4, split segment into apex and internodal segments

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+fix sort-triangle
 * create a depth map for the elements's base - for now assume that the sun is always high up on the y axis (eg. [0 5000 0])
 
 get the shadows to work in shadow-pass - wait for a better graphics card?
